# scripting

./: CMakeLists.txt  Makefile  Makefile.win32  ScriptedObject.cpp  ScriptedObject.h  ScriptingContext.cpp  ScriptingContext.h  lua.hpp  test.cpp
luacpp/: CMakeLists.txt
luacpp/include/: lua.hpp
luacpp/include/luacpp/: ScriptingContext.h
luacpp/src/: ScriptedObject.cpp  ScriptingContext.cpp
